tests/errors/syntax/function-unclosed.fn
---
Description: Function with opening brace but no close
Expected: FN1018
---

type Broken
{
    fn test
    {

}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
